<resources>
    <string name="app_name">Baking</string>

    <!-- fake strings -->
    <string name="fake_name" translatable="false">Nutella Pie</string>
    <string name="fake_ingredient_num" translatable="false">Number of Ingredient: 9</string>
    <string name="fake_step_num" translatable="false">Number of Step: 7</string>
    <string name="fake_servings" translatable="false">Servings: 8</string>
    <string name="face_recipe_step_Description" translatable="false">Recipe Step Description</string>
    <string name="fake_ingredient_name" translatable="false">Graham Cracker crumbs</string>
    <string name="fake_short_desc" translatable="false">Starting prep</string>
    <string name="fake_step_desc" translatable="false">1. Preheat the oven to 350\\u00b0F. Butter a 9\\\" deep dish pie pan.</string>

    <!-- keys -->
    <string name="key_recipe" translatable="false">key_recipe</string>
    <string name="key_ingredients" translatable="false">key_ingredients</string>
    <string name="key_step" translatable="false">key_step</string>
    <string name="key_step_size" translatable="false">key_step_size</string>
    <string name="key_current_step" translatable="false">key_current_step</string>
    <string name="key_ingredient_position" translatable="false">key_ingredient_position</string>

    <string name="ingredient_num">Number of Ingredient: %1$d</string>
    <string name="step_num">Number of Step: %1$d</string>
    <string name="serving_num">Servings: %1$d</string>

    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_step_introduction">Recipe Introduction</string>
    <string name="recipe_step_description">Recipe Step %1$d</string>
    <string name="fake_ingredient_quantity">2</string>
    <string name="fake_ingredient_measure">CUP</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="steps">Steps</string>
    <string name="network_is_disconnected">Network is disconnected!</string>
    <string name="ingredients">Ingredients</string>
    <string name="wrong_data">Data is invalid!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_updated">Widget is updated!</string>

</resources>
