<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/defaultMargin">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

        <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Title"
                tools:text="@string/fake_name" />

        <ImageView
                android:id="@+id/iv_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

        <TextView
                android:id="@+id/tv_recipe_ingredient_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                tools:text="@string/fake_ingredient_num" />

        <TextView
                android:id="@+id/tv_recipe_step_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                tools:text="@string/fake_step_num" />

        <TextView
                android:id="@+id/tv_recipe_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                tools:text="@string/fake_servings" />

    </LinearLayout>
</android.support.v7.widget.CardView>