<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.youknow.baking.step.details.step.StepDetailsFragment">

    <TextView
            android:id="@+id/tv_short_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Base.TextAppearance.AppCompat.Title"
            tools:text="@string/fake_short_desc"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exoplayer_video"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_short_desc"/>

    <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:text="@string/fake_step_desc"
            app:layout_constraintTop_toBottomOf="@+id/exoplayer_video"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/btn_prev"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    <Button
            android:id="@+id/btn_next"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
