<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

    <TextView
            android:id="@+id/widget_ingredient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="#bdbdbd"
            style="@style/Base.TextAppearance.AppCompat.Title"
            tools:text="@string/fake_ingredient_name" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="right">

        <TextView
                android:id="@+id/widget_ingredient_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fake_ingredient_quantity"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_name"
                app:layout_constraintRight_toLeftOf="@+id/tv_ingredient_measure" />

        <TextView
                android:id="@+id/widget_ingredient_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fake_ingredient_measure"
                app:layout_constraintTop_toTopOf="@+id/tv_ingredient_quantity"
                app:layout_constraintRight_toRightOf="parent" />
    </LinearLayout>

</LinearLayout>