<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

        <TextView
                android:id="@+id/tv_ingredient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Title"
                tools:text="@string/fake_ingredient_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/tv_ingredient_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                tools:text="@string/fake_ingredient_quantity"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_name"
                app:layout_constraintRight_toLeftOf="@+id/tv_ingredient_measure"/>

        <TextView
                android:id="@+id/tv_ingredient_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fake_ingredient_measure"
                app:layout_constraintTop_toTopOf="@+id/tv_ingredient_quantity"
                app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>